CHANGELOG:

ver 1.5.7 (12/10/2007)
 Added: 	Added onException callback support for Ajax request
 Added: 	Experimental CSS3 drop shadow and rounded corners added
 Added: 	Added 'autoFocusing' option [#133]
 Changed: 	Ajax.request callback change: onComplete -> onSuccess
 Fixed: 	overlayClose parameter for window sequences (wizards) fixed [#139]
 Fixed: 	Selecting a form element with mouse tab order fixed [#134]
 
ver 1.5.6 (10/09/2007)
 Changed: 	No title case improved. Fixed extra header space addition, changed CSS
 Changed: 	_insertContent method re-factored to be independed
 Changed: 	loadContent method changed to strip scripts while inserting to DOM (plain HTML case)
 Fixed: 	Fixed header hiding option in MSIE
 Fixed: 	Fixed IDs renaming in MSIE (JS object content type case)
 Fixed: 	Odd MSIE bug fixed with displaying forms on second modalbox calls
 Fixed: 	Added makePositioned to fix MSIE display issues with variable height
 Fixed: 	Added a workaround for content flickering in Firefox 
 Fixed: 	_putContent method modified to support callbacks properly. [#100]
 Fixed: 	_removeElements method fixed - IDs reverted properly for original content

ver 1.5.5.1 (09/21/2007)
 Added: 	If title options is set to 'false' the Modalbox header will not shown
 Fixed: 	Toggle SELECTs visibility in IE for cloned node approach [#125]
 Fixed: 	Critical odd bug with Safari 2 in the _setFocus method fixed

ver 1.5.5 (09/06/2007)
 Added: 	Modalbox can override standard alert messages. Use overrideAlert to toggle this feature on/off.
 Added: 	Added an option to toggle animated transitions on/off [#98]
 Added: 	Proper node clone IDs cleanup on hide [#120]. Unit-tests changes accordingly
 Changed: 	Default transition intervals changed
 Changed: 	_update method re-factored
 Changed: 	_findFocusableElements method re-factored to exclude hidden inputs
 Changed: 	Moving focus in direct and reverse order (by Shift+TAB combo)