@@ -58,7 +58,7 @@
 		<li><a href="#" title="Modalbox without header test" onclick="Modalbox.show('<h1>No header modalbox</h1><input type=\'button\' value=\'Resize me (20,20)\' onclick=\'Modalbox.resize(20,20)\' /><input type=\'button\' value=\'Resize me -100\' onclick=\'Modalbox.resize(-20,-20)\' />', {title: false }); return false;">Modalbox without header test</a></li>
 		<li><a href="#" title="Modalbox Ajax error test" onclick="Modalbox.show('http://www.google.com', {title: this.title }); return false;">Modalbox Ajax error test</a></li>
 		<li><a href="#" title="Modalbox wrong parameter test" onclick="Modalbox.show(123, {title: this.title }); return false;">Modalbox wrong parameter test</a></li>
-		<li><a href="#" title="Modalbox auto-focusing disabled test" onclick="Modalbox.show($('longTextContent'), {title: this.title, height: 200, autoFocusing: false }); return false;">Modalbox auto-focusing disabled test</a></li>
+		<li><a href="#" title="Modalbox auto-focusing disabled test" onclick="Modalbox.show($('longTextContent'), {title: this.title, height: 200, autoFocusing: false, closeValue: 'Close me' }); return false;">Modalbox auto-focusing disabled test</a></li>
 	</ul>
 	
 	<br />
